Fixes to the contrast and content

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -29,6 +29,20 @@ body {
   background-color: $black;
 }
 
+// Headers
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 // Navbar
 nav {
   z-index: 2;
@@ -143,8 +157,23 @@ nav {
 }
 
 .weights {
-  font-size: 3.5rem;
+  font-size: 3rem;
   color: $blue-800;
+}
+
+.bold-italic {
+  font-weight: 700 !important;
+  font-style: italic;
+}
+
+.regular-italic {
+  font-weight: 400;
+  font-style: italic;
+}
+
+.light-italic {
+  font-weight: 300;
+  font-style: italic;
 }
 
 // Colors
